force-app/main/default/objects/CSA_Inquiries_Setup__c/CSA_Inquiries_Setup__c.object-meta.xml
<CustomObject>
    <description>This says which fields will be displayed for each Inquiry type.</description>
    <label>CSA Inquiries Setup</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CSA Inquiry Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSA Inquiries Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>