force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Action_Add_Modify__c.field-meta.xml
<CustomField>
    <fullName>Action_Add_Modify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Action (Add/Modify)</label>
    <type>Checkbox</type>
</CustomField>