force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Additional_URLs_Affected__c.field-meta.xml
<CustomField>
    <fullName>Additional_URLs_Affected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional URLs Affected</label>
    <type>Checkbox</type>
</CustomField>