force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Affected_Commission__c.field-meta.xml
<CustomField>
    <fullName>Affected_Commission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affected Commission</label>
    <type>Checkbox</type>
</CustomField>