force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Affected_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Affected_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affected Revenue</label>
    <type>Checkbox</type>
</CustomField>