force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Affected_Role__c.field-meta.xml
<CustomField>
    <fullName>Affected_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affected Role</label>
    <type>Checkbox</type>
</CustomField>