force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Affected_Unit__c.field-meta.xml
<CustomField>
    <fullName>Affected_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Affected Unit</label>
    <type>Checkbox</type>
</CustomField>