force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Allow_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Attachment?</label>
    <type>Checkbox</type>
</CustomField>