force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Approved_Reject_Status__c.field-meta.xml
<CustomField>
    <fullName>Approved_Reject_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved/Reject Status</label>
    <type>Checkbox</type>
</CustomField>