force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Approved_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Approved_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Revenue</label>
    <type>Checkbox</type>
</CustomField>