force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Bank_Level__c.field-meta.xml
<CustomField>
    <fullName>Bank_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Level</label>
    <type>Checkbox</type>
</CustomField>