force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/BISID_ClientID__c.field-meta.xml
<CustomField>
    <fullName>BISID_ClientID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BIS ID / Client ID</label>
    <type>Checkbox</type>
</CustomField>