force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Bonus_Effected__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Effected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bonus Effected?</label>
    <type>Checkbox</type>
</CustomField>