force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Bonus_Expected__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Expected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bonus Expected</label>
    <type>Checkbox</type>
</CustomField>