force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Bonus_Received__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bonus Received</label>
    <type>Checkbox</type>
</CustomField>