force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Bonus_Type__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bonus Type</label>
    <type>Checkbox</type>
</CustomField>