force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Branch_Number__c.field-meta.xml
<CustomField>
    <fullName>Branch_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Branch Number</label>
    <type>Checkbox</type>
</CustomField>