force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Business_Justification__c.field-meta.xml
<CustomField>
    <fullName>Business_Justification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Justification</label>
    <type>Checkbox</type>
</CustomField>