force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Client_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Number</label>
    <type>Checkbox</type>
</CustomField>