force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Client_Platform__c.field-meta.xml
<CustomField>
    <fullName>Client_Platform__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Platform</label>
    <type>Checkbox</type>
</CustomField>