force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Client_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Start_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Applicable</inlineHelpText>
    <label>Client Start Date</label>
    <type>Checkbox</type>
</CustomField>