force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Commissionable_Month__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commissionable Month</label>
    <type>Checkbox</type>
</CustomField>