force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Commissionable_Year__c.field-meta.xml
<CustomField>
    <fullName>Commissionable_Year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commissionable Year</label>
    <type>Checkbox</type>
</CustomField>