force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Comp_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Comp_Plan_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comp Plan Type</label>
    <type>Checkbox</type>
</CustomField>