force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Corporate_Comment__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corporate Comment</label>
    <type>Checkbox</type>
</CustomField>