force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <defaultValue>false</defaultValue>
    <label>District</label>
    <type>Checkbox</type>
</CustomField>