force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/District_Number__c.field-meta.xml
<CustomField>
    <fullName>District_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Lookup to the Organizational Structure Object</inlineHelpText>
    <label>District Number</label>
    <type>Checkbox</type>
</CustomField>