force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/District_to_be_Credited__c.field-meta.xml
<CustomField>
    <fullName>District_to_be_Credited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>District to be Credited</label>
    <type>Checkbox</type>
</CustomField>