force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Division</label>
    <type>Checkbox</type>
</CustomField>