force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/DSM__c.field-meta.xml
<CustomField>
    <fullName>DSM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DSM</label>
    <type>Checkbox</type>
</CustomField>