force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead ID</label>
    <type>Checkbox</type>
</CustomField>