force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/LeadIdRequired__c.field-meta.xml
<CustomField>
    <fullName>LeadIdRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the Lead Id field required if it&apos;s displayed?</inlineHelpText>
    <label>Lead Id Required</label>
    <type>Checkbox</type>
</CustomField>