force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Moving_From_District__c.field-meta.xml
<CustomField>
    <fullName>Moving_From_District__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moving From District #</label>
    <type>Checkbox</type>
</CustomField>