force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Moving_From_DSM_del__c.field-meta.xml
<CustomField>
    <fullName>Moving_From_DSM_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moving From DSM</label>
    <type>Checkbox</type>
</CustomField>