force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/New_Units__c.field-meta.xml
<CustomField>
    <fullName>New_Units__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Units</label>
    <type>Checkbox</type>
</CustomField>