force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for Diamond Club Discrep</description>
    <inlineHelpText>for Diamond Club Discrep</inlineHelpText>
    <label>Order #</label>
    <type>Checkbox</type>
</CustomField>