force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Original_Units__c.field-meta.xml
<CustomField>
    <fullName>Original_Units__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Original Units</label>
    <type>Checkbox</type>
</CustomField>