force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Payroll_Spec_Branch_No__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Spec_Branch_No__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll Spec Branch #</label>
    <type>Checkbox</type>
</CustomField>