force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Payroll_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Specialist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payroll Specialist</label>
    <type>Checkbox</type>
</CustomField>