force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Processing_Branch__c.field-meta.xml
<CustomField>
    <fullName>Processing_Branch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processing Branch</label>
    <type>Checkbox</type>
</CustomField>