force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Product_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Product_Picklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product</label>
    <type>Checkbox</type>
</CustomField>