force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Product_Picklist_Single__c.field-meta.xml
<CustomField>
    <fullName>Product_Picklist_Single__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product_Picklist_Single</label>
    <type>Checkbox</type>
</CustomField>