force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Product_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Start_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Start Date</label>
    <type>Checkbox</type>
</CustomField>