force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Prospect_Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Client_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prospect Client Name</label>
    <type>Checkbox</type>
</CustomField>