force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Question_Comment__c.field-meta.xml
<CustomField>
    <fullName>Question_Comment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Question/Comment</label>
    <type>Checkbox</type>
</CustomField>