force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reason Code</label>
    <type>Checkbox</type>
</CustomField>