force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Reason_for_Request__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reason for Request</label>
    <type>Checkbox</type>
</CustomField>