force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Receiving_District__c.field-meta.xml
<CustomField>
    <fullName>Receiving_District__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receiving District #</label>
    <type>Checkbox</type>
</CustomField>