force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Receiving_DSM_del__c.field-meta.xml
<CustomField>
    <fullName>Receiving_DSM_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receiving DSM</label>
    <type>Checkbox</type>
</CustomField>