force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/RECOGNITION_TYPE__c.field-meta.xml
<CustomField>
    <fullName>RECOGNITION_TYPE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recognition Type</label>
    <type>Checkbox</type>
</CustomField>