force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Referral_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_Bank_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referring Parter/Bank Name</label>
    <type>Checkbox</type>
</CustomField>