force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral Type</label>
    <type>Checkbox</type>
</CustomField>