force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Referring_Rep__c.field-meta.xml
<CustomField>
    <fullName>Referring_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referring Rep</label>
    <type>Checkbox</type>
</CustomField>