force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Related Opportunity</label>
    <type>Checkbox</type>
</CustomField>