force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report Name</label>
    <type>Checkbox</type>
</CustomField>