force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Report_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report Status</label>
    <type>Checkbox</type>
</CustomField>