force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Report Type</label>
    <type>Checkbox</type>
</CustomField>