force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Type</label>
    <type>Checkbox</type>
</CustomField>