force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Requestors_Role__c.field-meta.xml
<CustomField>
    <fullName>Requestors_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requestors Role</label>
    <type>Checkbox</type>
</CustomField>