force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/RSM__c.field-meta.xml
<CustomField>
    <fullName>RSM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RSM</label>
    <type>Checkbox</type>
</CustomField>