force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Sales_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales ID</label>
    <type>Checkbox</type>
</CustomField>