force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Sales_Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Rep Code</label>
    <type>Checkbox</type>
</CustomField>