force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/SOAR_Referral_Type__c.field-meta.xml
<CustomField>
    <fullName>SOAR_Referral_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SOAR Referral Type</label>
    <type>Checkbox</type>
</CustomField>