force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Splitting_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Splitting_Rep_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Splitting Rep Name</label>
    <type>Checkbox</type>
</CustomField>