force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subject</label>
    <type>Checkbox</type>
</CustomField>