force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted By</label>
    <type>Checkbox</type>
</CustomField>