force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Submitted_By_Zone__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Zone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted By Zone</label>
    <type>Checkbox</type>
</CustomField>