force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Suggested_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Revenue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suggested Revenue</label>
    <type>Checkbox</type>
</CustomField>