force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Term_ed_Rep__c.field-meta.xml
<CustomField>
    <fullName>Term_ed_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Termed Rep</label>
    <type>Checkbox</type>
</CustomField>