force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Tier_2_Bank__c.field-meta.xml
<CustomField>
    <fullName>Tier_2_Bank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tier 2 Bank</label>
    <type>Checkbox</type>
</CustomField>