force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/TRR__c.field-meta.xml
<CustomField>
    <fullName>TRR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TRR</label>
    <type>Checkbox</type>
</CustomField>