force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unit Type</label>
    <type>Checkbox</type>
</CustomField>