force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>URL</label>
    <type>Checkbox</type>
</CustomField>