force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Web_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Web_Request_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web Request Type</label>
    <type>Checkbox</type>
</CustomField>