force-app/main/default/objects/CSA_Inquiries_Setup__c/fields/Zone_Number_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Zone_Number_Picklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zone Number</label>
    <type>Checkbox</type>
</CustomField>